--- a/app/src/main/res/layout/activity_user_detail_api.xml
+++ b/app/src/main/res/layout/activity_user_detail_api.xml
@@ -13,6 +13,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <ToggleButton
+            android:id="@+id/toggle_favorite"
+            android:layout_width="38dp"
+            android:layout_height="38dp"
+            android:textOff=""
+            android:textOn=""
+            android:background="@drawable/favorite_toggle"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <ProgressBar
             android:id="@+id/progressBar"
             style="?android:attr/progressBarStyle"
@@ -28,7 +42,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            tools:layout_editor_absoluteY="16dp">
 
             <RelativeLayout
                 android:layout_width="200dp"
@@ -65,8 +80,8 @@
                 android:layout_marginTop="12dp">
 
                 <TextView
-                    style="@style/TextContent.Subtitle"
                     android:id="@+id/username"
+                    style="@style/TextContent.Subtitle"
                     android:textAlignment="center"
                     android:textSize="24sp" />
 
@@ -81,15 +96,15 @@
                 <TableRow tools:ignore="UselessParent">
 
                     <TextView
-                        style="@style/TextContent.Subtitle"
                         android:id="@+id/company"
+                        style="@style/TextContent.Subtitle"
                         android:textAlignment="center"
                         android:textSize="16sp"
                         app:drawableStartCompat="@drawable/ic_baseline_business_center_24" />
 
                     <TextView
-                        style="@style/TextContent.Subtitle"
                         android:id="@+id/location"
+                        style="@style/TextContent.Subtitle"
                         android:textAlignment="center"
                         android:textSize="16sp"
                         app:drawableStartCompat="@drawable/ic_baseline_location_on_24" />
@@ -103,8 +118,8 @@
                 android:layout_marginTop="12dp">
 
                 <TextView
-                    style="@style/TextContent.Subtitle"
                     android:id="@+id/repository"
+                    style="@style/TextContent.Subtitle"
                     android:textAlignment="center"
                     android:textSize="16sp"
                     app:drawableStartCompat="@drawable/ic_baseline_library_books_24" />
@@ -118,8 +133,8 @@
                 android:layout_marginTop="12dp">
 
                 <TextView
-                    style="@style/TextContent.Subtitle"
                     android:id="@+id/follow"
+                    style="@style/TextContent.Subtitle"
                     android:textAlignment="center"
                     android:textSize="16sp"
                     app:drawableStartCompat="@drawable/ic_baseline_people_alt_24" />
@@ -131,7 +146,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:color/white"
-                app:tabTextColor="?attr/colorPrimary"/>
+                app:tabTextColor="?attr/colorPrimary" />
 
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/view_pager"
