--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -13,6 +13,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <ToggleButton
+            android:id="@+id/toggle_favorite"
+            android:layout_width="38dp"
+            android:layout_height="38dp"
+            android:textOff=""
+            android:textOn=""
+            android:background="@drawable/favorite_toggle"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <ProgressBar
             android:id="@+id/progressBar"
             style="?android:attr/progressBarStyle"
@@ -78,7 +92,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="12dp">
 
-                <TableRow>
+                <TableRow tools:ignore="UselessParent">
 
                     <TextView
                         style="@style/TextContent.Subtitle"
@@ -132,7 +146,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="12dp">
 
-                <TableRow>
+                <TableRow tools:ignore="UselessParent">
 
                     <Button
                         android:id="@+id/github"
