--- a/app/src/main/res/layout/item_row_user.xml
+++ b/app/src/main/res/layout/item_row_user.xml
@@ -40,6 +40,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:layout_toEndOf="@id/avatar"
+            android:justificationMode="inter_word"
             android:textSize="16sp"
             android:textStyle="bold"
             card_view:layout_constraintEnd_toEndOf="parent"
@@ -54,6 +55,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="24dp"
             android:ellipsize="end"
+            android:justificationMode="inter_word"
             android:maxLines="5"
             card_view:layout_constraintBottom_toBottomOf="parent"
             card_view:layout_constraintEnd_toEndOf="@+id/name"
